--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
   </div>
 
   <main data-bs-spy="scroll" data-bs-target="#menuPill">
-    <section id="home">
+    <section id="home" class="section-page">
       <div id="homeCover">
         <div id="mainHeader">
           <div class="mainTitle">
@@ -568,48 +568,45 @@
     <section id="contact" class="section-page">
       <div class="container pb-5">
         <h2 class="text-center display-1 mb-5">Let's Chat!</h2>
-        <div class="bg-light p-2 border border-1 border-info shadow-lg">
-          <form>
-            <div class="row g-3">
-              <div class="col-12 col-md-6">
-                <label class="form-label" for="FirstName">First Name</label>
-                <input class="form-control" name="FirstName" id="FirstName" type="text" placeholder="First Name"
-                  required />
-              </div>
-
-              <div class="col-12 col-md-6">
-                <label class="form-label" for="LastName">Last Name</label>
-                <input class="form-control" name="LastName" id="LastName" type="text" placeholder="Last Name"
-                  required />
-              </div>
-
-              <div class="col-12 col-md-6">
-                <label class="form-label" for="Email">Email</label>
-                <input class="form-control" name="Email" id="Email" type="email" placeholder="Email" required />
-              </div>
-
-              <div class="col-12 col-md-6">
-                <label class="form-label" for="Phone">Phone (Optional)</label>
-                <input class="form-control" name="Phone" id="Phone" type="tel" placeholder="Phone" />
-              </div>
-
-              <div class="col-12 col-md-12">
-                <label class="form-label" for="Subject">Subject</label>
-                <input class="form-control" name="Subject" id="Subject" type="text" placeholder="Subject" required />
-              </div>
-
-              <div class="col-12 col-md-12">
-                <label class="form-label" for="Message">Message</label>
-                <textarea class="form-control" name="Message" id="Message" placeholder="Type your message here..."
-                  rows="4" required></textarea>
-              </div>
-
-              <div class="mt-2 text-end">
-                <button type="submit" class="btn btn-primary">Submit</button>
-              </div>
+        <form>
+          <div class="row g-3">
+            <div class="col-12 col-md-6">
+              <label class="form-label" for="FirstName">First Name</label>
+              <input class="form-control" name="FirstName" id="FirstName" type="text" placeholder="First Name"
+                required />
             </div>
-          </form>
-        </div>
+
+            <div class="col-12 col-md-6">
+              <label class="form-label" for="LastName">Last Name</label>
+              <input class="form-control" name="LastName" id="LastName" type="text" placeholder="Last Name" required />
+            </div>
+
+            <div class="col-12 col-md-6">
+              <label class="form-label" for="Email">Email</label>
+              <input class="form-control" name="Email" id="Email" type="email" placeholder="Email" required />
+            </div>
+
+            <div class="col-12 col-md-6">
+              <label class="form-label" for="Phone">Phone (Optional)</label>
+              <input class="form-control" name="Phone" id="Phone" type="tel" placeholder="Phone" />
+            </div>
+
+            <div class="col-12 col-md-12">
+              <label class="form-label" for="Subject">Subject</label>
+              <input class="form-control" name="Subject" id="Subject" type="text" placeholder="Subject" required />
+            </div>
+
+            <div class="col-12 col-md-12">
+              <label class="form-label" for="Message">Message</label>
+              <textarea class="form-control" name="Message" id="Message" placeholder="Type your message here..."
+                rows="4" required></textarea>
+            </div>
+
+            <div class="mt-2 text-end">
+              <button type="submit" class="btn btn-primary">Submit</button>
+            </div>
+          </div>
+        </form>
       </div>
     </section>
   </main>
