Configured form for Netlify

--- a/index.html
+++ b/index.html
@@ -568,7 +568,7 @@
     <section id="contact" class="section-page">
       <div class="container pb-5">
         <h2 class="text-center display-1 mb-5">Let's Chat!</h2>
-        <form>
+        <form method="post" name="GuardianContact" data-netlify="true">
           <div class="row g-3">
             <div class="col-12 col-md-6">
               <label class="form-label" for="FirstName">First Name</label>
