--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <link rel="stylesheet" href="/css/blogCard.css" />
 
   <!-- Favicon -->
-  <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon" />
+  <link rel="icon" href="/img/favicon_light.svg" type="image/svg+xml" />
 </head>
 
 <body data-je-theme="purple">
@@ -403,8 +403,9 @@
             <div class="hc-wrapper">
               <div class="hc-card">
                 <picture>
-                  <source srcset="/img/logos/fizzbuzz_600.jpg" media="(min-width: 1200px)" />
-                  <img src="/img/logos/fizzbuzz_200.jpg" />
+                  <!-- <source srcset="/img/logos/fizzbuzz_600.jpg" media="(min-width: 1200px)" />
+                  <img src="/img/logos/fizzbuzz_200.jpg" /> -->
+                  <img src="/img/logos/FizzBuzz.svg" />
                 </picture>
                 <div class="hc-content">
                   <p>
@@ -446,122 +447,6 @@
           me to gain a better understanding as well.
         </p>
         <div id="blogs">
-          <article class="card mb-4 blog-article">
-            <div class="row g-0 blog-row">
-              <div class="col-12 col-lg-4 blog-header">
-                <a href="#" class="blog-image-link">
-                  <img src="/img/Blog/Blog_FlyingGirl.jpg" class="blog-image" />
-                </a>
-                <div class="blog-date">
-                  <div class="blog-day">11</div>
-                  <div class="blog-month">January</div>
-                </div>
-              </div>
-              <div class="col-12 col-lg-8">
-                <div class="card-body h-100 d-flex flex-column justify-content-around">
-                  <h2 class="card-title">Make SQL Queries Fly</h2>
-                  <p class="card-text line-clamp">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatem dolorum perferendis, rerum
-                    animi possimus tempore. Quidem voluptas ratione nisi aperiam sunt! Eligendi animi repudiandae
-                    adipisci, est accusantium delectus earum neque.
-                  </p>
-                  <div>
-                    <a href="#" class="btn btn-primary">Read More</a>
-                  </div>
-                  <p class="card-text">
-                    <small class="text-muted">Published 3 days ago</small>
-                  </p>
-                </div>
-              </div>
-            </div>
-          </article>
-          <article class="card mb-4 blog-article">
-            <div class="row g-0 blog-row">
-              <div class="col-12 col-lg-4 blog-header">
-                <a href="#" class="blog-image-link">
-                  <img src="/img/Blog/Blog_Database.jpg" class="blog-image" />
-                </a>
-                <div class="blog-date">
-                  <div class="blog-day">12</div>
-                  <div class="blog-month">February</div>
-                </div>
-              </div>
-              <div class="col-12 col-lg-8">
-                <div class="card-body h-100 d-flex flex-column justify-content-around">
-                  <h2 class="card-title">Storing Images In The Database</h2>
-                  <p class="card-text line-clamp">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatem dolorum perferendis, rerum
-                    animi possimus tempore. Quidem voluptas ratione nisi aperiam sunt! Eligendi animi repudiandae
-                    adipisci, est accusantium delectus earum neque.
-                  </p>
-                  <div>
-                    <a href="#" class="btn btn-primary">Read More</a>
-                  </div>
-                  <p class="card-text">
-                    <small class="text-muted">Published 3 days ago</small>
-                  </p>
-                </div>
-              </div>
-            </div>
-          </article>
-          <article class="card mb-4 blog-article">
-            <div class="row g-0 blog-row">
-              <div class="col-12 col-lg-4 blog-header">
-                <a href="#" class="blog-image-link">
-                  <img src="/img/Blog/Blog_CodeTag.jpg" class="blog-image" />
-                </a>
-                <div class="blog-date">
-                  <div class="blog-day">13</div>
-                  <div class="blog-month">March</div>
-                </div>
-              </div>
-              <div class="col-12 col-lg-8">
-                <div class="card-body h-100 d-flex flex-column justify-content-around">
-                  <h2 class="card-title">The Power of CSS</h2>
-                  <p class="card-text line-clamp">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatem dolorum perferendis, rerum
-                    animi possimus tempore. Quidem voluptas ratione nisi aperiam sunt! Eligendi animi repudiandae
-                    adipisci, est accusantium delectus earum neque.
-                  </p>
-                  <div>
-                    <a href="#" class="btn btn-primary">Read More</a>
-                  </div>
-                  <p class="card-text">
-                    <small class="text-muted">Published 3 days ago</small>
-                  </p>
-                </div>
-              </div>
-            </div>
-          </article>
-          <article class="card mb-4 blog-article">
-            <div class="row g-0 blog-row">
-              <div class="col-12 col-lg-4 blog-header">
-                <a href="#" class="blog-image-link">
-                  <img src="/img/Blog/Blog_DecisionRoad.jpg" class="blog-image" />
-                </a>
-                <div class="blog-date">
-                  <div class="blog-day">14</div>
-                  <div class="blog-month">April</div>
-                </div>
-              </div>
-              <div class="col-12 col-lg-8">
-                <div class="card-body h-100 d-flex flex-column justify-content-around">
-                  <h2 class="card-title">Make SQL Queries Fly</h2>
-                  <p class="card-text line-clamp">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatem dolorum perferendis, rerum
-                    animi possimus tempore. Quidem voluptas ratione nisi aperiam sunt! Eligendi animi repudiandae
-                    adipisci, est accusantium delectus earum neque.
-                  </p>
-                  <div>
-                    <a href="#" class="btn btn-primary">Read More</a>
-                  </div>
-                  <p class="card-text">
-                    <small class="text-muted">Published 3 days ago</small>
-                  </p>
-                </div>
-              </div>
-            </div>
-          </article>
         </div>
       </div>
     </section>
@@ -957,6 +842,33 @@
     </div>
   </div>
 
+  <template id="blog-template">
+    <article class="card mb-4 blog-article">
+      <div class="row g-0 blog-row">
+        <div class="col-12 col-lg-4 blog-header">
+          <a href="#" target="_blank" rel="noopener noreferrer" class="blog-image-link" data-blog="imageLink"></a>
+          <div class="blog-date">
+            <div class="blog-day" data-blog="day"></div>
+            <div class="blog-month" data-blog="month"></div>
+          </div>
+        </div>
+        <div class="col-12 col-lg-8">
+          <div class="card-body h-100 d-flex flex-column justify-content-around">
+            <h2 class="card-title" data-blog="title"></h2>
+            <p class="card-text line-clamp" data-blog="content"></p>
+            <div>
+              <a href="#" target="_blank" rel="noopener noreferrer" class="btn btn-primary"
+                data-blog="readMoreLink">Read More</a>
+            </div>
+            <p class="card-text">
+              <small class="text-muted" data-blog="publishedDate"></small>
+            </p>
+          </div>
+        </div>
+      </div>
+    </article>
+  </template>
+
   <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
@@ -965,6 +877,11 @@
   <script>
     const tooltipTriggerList = document.querySelectorAll('[data-bs-toggle="tooltip"]')
     const tooltipList = [...tooltipTriggerList].map(tooltipTriggerEl => new bootstrap.Tooltip(tooltipTriggerEl))
+  </script>
+
+  <script src="/js/blogApi.js"></script>
+  <script>
+    fetchBlogData();
   </script>
 </body>
 
