Home, Footer, Color Theme

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <link rel="icon" href="/img/favicon_light.svg" type="image/svg+xml" />
 </head>
 
-<body data-je-theme="purple">
+<body data-je-theme="blue">
 
   <div id="menuPillContainer" class="navbar navbar-dark">
     <nav id="menuPill" class="navbar-nav text-light">
@@ -108,16 +108,18 @@
   <main data-bs-spy="scroll" data-bs-target="#menuPill">
     <section id="home" class="section-page">
       <div id="homeCover">
-        <div id="mainHeader">
-          <div class="mainTitle">
-            Dane
-            <span>
-              <img class="mainLogo" src="/img/dw_signature_white.png" />
-            </span>
+        <div id="mainHeader" class="text-center">
+          <div>
+            <img class="mainLogo mb-2" src="/img/je_logo_only_dark.svg" />
           </div>
-          <div class="mainTitle">Whitman</div>
+          <div class="mainTitle">
+            <span>Jon-Eri</span>k
+          </div>
+          <div class="mainTitle">
+            <span>Ekdah</span>l
+          </div>
           <div class="subTitle">Software Developer</div>
-          <a href="#contact" class="btn btn-primary mt-2 w-100">
+          <a href="#contact" class="btn btn-primary mt-3 w-100">
             CONTACT ME
           </a>
         </div>
@@ -501,7 +503,7 @@
       <!-- Rows already have d-flex class, so not need to add it before align-items -->
       <div class="row align-items-center g-3">
         <div class="col-3">
-          <img src="/img/dw_signature_white.png" alt="Logo" height="40" />
+          <img src="/img/je_logo_only_dark.svg" alt="Logo" height="56" />
         </div>
 
         <!-- Cards take up entire horizontal area of container -->
@@ -515,20 +517,15 @@
         </div>
 
         <div class="d-none d-lg-block col-lg-3 text-lg-end">
-          <a href="https://linkedin.com/your-profile" class="text-decoration-none" target="_blank"
+          <a href="https://www.linkedin.com/in/jon-erik-ekdahl-96804640" class="text-decoration-none" target="_blank"
             rel="noopener noreferrer">
             <i class="bi bi-linkedin p-2"></i>
           </a>
-          <a href="https://github.com/your-profile" class="text-decoration-none" target="_blank"
+          <a href="https://github.com/jelekdahl" class="text-decoration-none" target="_blank"
             rel="noopener noreferrer">
             <i class="bi bi-github p-2"></i>
           </a>
-          <!-- Remove this when personalizing -->
-          <a href="https://twitter.com/your-profile" class="text-decoration-none" target="_blank"
-            rel="noopener noreferrer">
-            <i class="bi bi-twitter-x p-2"></i>
-          </a>
-          <a href="mailto:youremail@domain.com" class="text-decoration-none" target="_blank">
+          <a href="mailto:jelekdahl@gmail.com" class="text-decoration-none" target="_blank">
             <i class="bi bi-envelope-at p-2"></i>
           </a>
         </div>
