--- a/index.html
+++ b/index.html
@@ -337,49 +337,16 @@
             <div class="hc-wrapper">
               <div class="hc-card">
                 <picture>
-                  <source srcset="/img/logos/LoanShark_600.png" media="(min-width: 1200px)" />
-                  <img src="/img/logos/LoanShark_200.png" />
+                  <!-- <source srcset="/img/logos/reeltimerankings_600.png" media="(min-width: 1200px)" /> -->
+                  <img src="/img/logos/reeltimerankings.svg" />
                 </picture>
                 <div class="hc-content">
                   <p>
-                    Something having to do with loans and/or sharks, built with
-                    HTML, CSS, and JavaScript
-                  </p>
-                  <a class="btn btn-primary" href="#challenges">Learn More</a>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col">
-            <div class="hc-wrapper">
-              <div class="hc-card">
-                <picture>
-                  <source srcset="/img/logos/tacocat_600.png" media="(min-width: 1200px)" />
-                  <img src="/img/logos/tacocat_200.png" />
-                </picture>
-                <div class="hc-content">
-                  <p>
-                    Something having to do with tacos and/or cats, built with
-                    HTML, CSS, and JavaScript
-                  </p>
-                  <a class="btn btn-primary" href="#challenges">Learn More</a>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col">
-            <div class="hc-wrapper">
-              <div class="hc-card">
-                <picture>
-                  <source srcset="/img/logos/Tasker_600.png" media="(min-width: 1200px)" />
-                  <img src="/img/logos/Tasker_200.png" />
-                </picture>
-                <div class="hc-content">
-                  <p>
-                    Something having to do with taskers and possibly tasks, built
+                    Something having to do with reels, times, and/or rankings, built
                     with HTML, CSS, and JavaScript
                   </p>
-                  <a class="btn btn-primary" href="#challenges">Learn More</a>
+                  <a class="btn btn-primary" href="https://rainbow-choux-867392.netlify.app/" target="_blank"
+                    rel="noopener noreferrer">Visit Page</a>
                 </div>
               </div>
             </div>
@@ -388,15 +355,16 @@
             <div class="hc-wrapper">
               <div class="hc-card">
                 <picture>
-                  <source srcset="/img/logos/Superdog_600.jpg" media="(min-width: 1200px)" />
-                  <img src="/img/logos/Superdog_200.jpg" />
+                  <!-- <source srcset="/img/logos/justleavemealone_600.svg" media="(min-width: 1200px)" /> -->
+                  <img src="/img/logos/justleavemealone.svg" />
                 </picture>
                 <div class="hc-content">
                   <p>
-                    Something having to do with super dogs and potentially events,
-                    built with HTML, CSS, and JavaScript
+                    Something having to do with loans, built with
+                    HTML, CSS, and JavaScript
                   </p>
-                  <a class="btn btn-primary" href="#challenges">Learn More</a>
+                  <a class="btn btn-primary" href="https://gleeful-lokum-a7a444.netlify.app/"
+                    target="_blank" rel="noopener noreferrer">Visit Page</a>
                 </div>
               </div>
             </div>
@@ -405,16 +373,34 @@
             <div class="hc-wrapper">
               <div class="hc-card">
                 <picture>
-                  <!-- <source srcset="/img/logos/fizzbuzz_600.jpg" media="(min-width: 1200px)" />
-                  <img src="/img/logos/fizzbuzz_200.jpg" /> -->
-                  <img src="/img/logos/FizzBuzz.svg" />
+                  <!-- <source srcset="/img/logos/eventhandler_600.svg" media="(min-width: 1200px)" /> -->
+                  <img src="/img/logos/eventhandler.svg" />
+                </picture>
+                <div class="hc-content">
+                  <p>
+                    Something having to do with event attendance counts, built
+                    with HTML, CSS, and JavaScript
+                  </p>
+                  <a class="btn btn-primary" href="https://lovely-cassata-e67814.netlify.app/"
+                    target="_blank" rel="noopener noreferrer">Visit Page</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="hc-wrapper">
+              <div class="hc-card">
+                <picture>
+                  <!-- <source srcset="/img/logos/fizzbuzz_600.svg" media="(min-width: 1200px)" /> -->
+                  <img src="/img/logos/fizzbuzz.svg" />
                 </picture>
                 <div class="hc-content">
                   <p>
                     Something having to do with fizzes and/or buzzes, built with
                     HTML, CSS, and JavaScript
                   </p>
-                  <a class="btn btn-primary" href="#challenges">Learn More</a>
+                  <a class="btn btn-primary" href="https://thunderous-melba-a347d1.netlify.app/" target="_blank"
+                    rel="noopener noreferrer">Visit Page</a>
                 </div>
               </div>
             </div>
@@ -423,23 +409,42 @@
             <div class="hc-wrapper">
               <div class="hc-card">
                 <picture>
-                  <source srcset="/img/logos/Notary_600.jpg" media="(min-width: 1200px)" />
-                  <img src="/img/logos/Notary_200.jpg" />
+                  <!-- <source srcset="/img/logos/smartram_600.svg" media="(min-width: 1200px)" /> -->
+                  <img src="/img/logos/smartram.svg" />
                 </picture>
                 <div class="hc-content">
                   <p>
-                    Something having to do with notaries, built with
+                    Something having to do with a smart ram,
+                    built with HTML, CSS, and JavaScript
+                  </p>
+                  <a class="btn btn-primary" href="https://spectacular-strudel-f0f2ba.netlify.app/" target="_blank"
+                    rel="noopener noreferrer">Visit Page</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="hc-wrapper">
+              <div class="hc-card">
+                <picture>
+                  <!-- <source srcset="/img/logos/backwords_600.svg" media="(min-width: 1200px)" /> -->
+                  <img src="/img/logos/backwords.svg" />
+                </picture>
+                <div class="hc-content">
+                  <p>
+                    Something having to do with backs and words, built with
                     HTML, CSS, and JavaScript
                   </p>
-                  <a class="btn btn-primary" href="#challenges">Learn More</a>
+                  <a class="btn btn-primary" href="https://splendorous-taiyaki-628766.netlify.app/" target="_blank"
+                    rel="noopener noreferrer">Visit Page</a>
                 </div>
               </div>
             </div>
           </div>
         </div>
       </div>
-
     </section>
+
     <section id="blog" class="section-page">
       <div class="container">
         <h2 class="text-center display-1 mb-5">Stuff I Write About</h2>
@@ -511,7 +516,7 @@
         <div class="col-9 col-lg-6 d-flex justify-content-end justify-content-lg-center">
           <div class="card shadow">
             <div class="card-body text-center">
-              Check out my <a href="#projects">Bug Tracker</a>!
+              Check out my <a href="#projects">Issue Tracker</a>!
             </div>
           </div>
         </div>
@@ -521,8 +526,7 @@
             rel="noopener noreferrer">
             <i class="bi bi-linkedin p-2"></i>
           </a>
-          <a href="https://github.com/jelekdahl" class="text-decoration-none" target="_blank"
-            rel="noopener noreferrer">
+          <a href="https://github.com/jelekdahl" class="text-decoration-none" target="_blank" rel="noopener noreferrer">
             <i class="bi bi-github p-2"></i>
           </a>
           <a href="mailto:jelekdahl@gmail.com" class="text-decoration-none" target="_blank">
