Project & Challenge Logos final, Animated Issue Tracker link in footer

--- a/index.html
+++ b/index.html
@@ -266,8 +266,8 @@
             <div class="hc-wrapper">
               <div class="hc-card">
                 <picture>
-                  <source srcset="/img/logos/BugTracker_600.jpg" media="(min-width: 1200px)" />
-                  <img src="/img/logos/BugTracker_200.jpg" />
+                  <!-- <source srcset="/img/logos/goldentickets_600.svg" media="(min-width: 1200px)" /> -->
+                  <img src="/img/logos/goldentickets.svg" />
                 </picture>
                 <div class="hc-content">
                   <p>
@@ -285,8 +285,8 @@
             <div class="hc-wrapper">
               <div class="hc-card">
                 <picture>
-                  <source srcset="/img/logos/Contact_Pro.png" />
-                  <img src="/img/logos/Contact_Pro.png" />
+                  <!-- <source srcset="/img/logos/networking_600.svg" /> -->
+                  <img src="/img/logos/networking.svg" />
                 </picture>
                 <div class="hc-content">
                   <p>
@@ -303,8 +303,8 @@
             <div class="hc-wrapper">
               <div class="hc-card">
                 <picture>
-                  <source srcset="/img/logos/Tech_Talk.png" />
-                  <img src="/img/logos/Tech_Talk.png" />
+                  <!-- <source srcset="/img/logos/commentlines_600.svg" /> -->
+                  <img src="/img/logos/commentlines.svg" />
                 </picture>
                 <div class="hc-content">
                   <p>
@@ -363,8 +363,8 @@
                     Something having to do with loans, built with
                     HTML, CSS, and JavaScript
                   </p>
-                  <a class="btn btn-primary" href="https://gleeful-lokum-a7a444.netlify.app/"
-                    target="_blank" rel="noopener noreferrer">Visit Page</a>
+                  <a class="btn btn-primary" href="https://gleeful-lokum-a7a444.netlify.app/" target="_blank"
+                    rel="noopener noreferrer">Visit Page</a>
                 </div>
               </div>
             </div>
@@ -381,8 +381,8 @@
                     Something having to do with event attendance counts, built
                     with HTML, CSS, and JavaScript
                   </p>
-                  <a class="btn btn-primary" href="https://lovely-cassata-e67814.netlify.app/"
-                    target="_blank" rel="noopener noreferrer">Visit Page</a>
+                  <a class="btn btn-primary" href="https://lovely-cassata-e67814.netlify.app/" target="_blank"
+                    rel="noopener noreferrer">Visit Page</a>
                 </div>
               </div>
             </div>
@@ -515,8 +515,10 @@
         <!-- So we use d-flex to make it just wide enough for content -->
         <div class="col-9 col-lg-6 d-flex justify-content-end justify-content-lg-center">
           <div class="card shadow">
-            <div class="card-body text-center">
-              Check out my <a href="#projects">Issue Tracker</a>!
+            <div class="card-body text-center bg-black">
+              Check out my 
+              <a href="https://bugtracker-production-b641.up.railway.app/" class="link-gold"
+                target="_blank" rel="noopener noreferrer">Issue Tracker</a>!
             </div>
           </div>
         </div>
@@ -636,7 +638,8 @@
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">Visit Project</button>
+          <a type="button" class="btn btn-primary" target="_blank" rel="noopener noreferrer"
+            href="https://bugtracker-production-b641.up.railway.app/">Visit Project</a>
         </div>
       </div>
     </div>
@@ -737,7 +740,8 @@
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">Visit Project</button>
+          <a type="button" class="btn btn-primary" target="_blank" rel="noopener noreferrer"
+            href="https://je-networking-production.up.railway.app/">Visit Project</a>
         </div>
       </div>
     </div>
@@ -837,7 +841,8 @@
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">Visit Project</button>
+          <a type="button" class="btn btn-primary" target="_blank" rel="noopener noreferrer"
+            href="https://guardianblog-production.up.railway.app/">Visit Project</a>
         </div>
       </div>
     </div>
