Underline for Animated Issue Tracker link in footer

--- a/index.html
+++ b/index.html
@@ -517,8 +517,9 @@
           <div class="card shadow">
             <div class="card-body text-center bg-black">
               Check out my 
-              <a href="https://bugtracker-production-b641.up.railway.app/" class="link-gold"
-                target="_blank" rel="noopener noreferrer">Issue Tracker</a>!
+              <a href="https://bugtracker-production-b641.up.railway.app/"
+                target="_blank" rel="noopener noreferrer" class="gold-underline">
+                  <span class="text-shine-gold">Issue Tracker</span></a>!
             </div>
           </div>
         </div>
