--- a/index.html
+++ b/index.html
@@ -565,16 +565,16 @@
                 </div>
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="/img/logos/BugTracker_600.jpg" class="d-block w-100" alt="Insecticide Logo">
+                    <img src="/img/screenshots/GoldenTicketsScreen0.svg" class="d-block w-100" alt="Insecticide Logo">
                   </div>
                   <div class="carousel-item">
-                    <img src="/img/screenshots/BugTrackerScreen1.jpg" class="d-block w-100" alt="Screenshot 1">
+                    <img src="/img/screenshots/GoldenTicketsScreen1.png" class="d-block w-100" alt="Screenshot 1">
                   </div>
                   <div class="carousel-item">
-                    <img src="/img/screenshots/BugTrackerScreen2.jpg" class="d-block w-100" alt="Screenshot 2">
+                    <img src="/img/screenshots/GoldenTicketsScreen2.png" class="d-block w-100" alt="Screenshot 2">
                   </div>
                   <div class="carousel-item">
-                    <img src="/img/screenshots/BugTrackerScreen3.jpg" class="d-block w-100" alt="Screenshot 3">
+                    <img src="/img/screenshots/GoldenTicketsScreen3.png" class="d-block w-100" alt="Screenshot 3">
                   </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#bugTrackerCarousel"
@@ -671,16 +671,16 @@
                 </div>
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="/img/logos/Contact_Pro.png" class="d-block w-100" alt="Contact Pro Logo">
+                    <img src="/img/screenshots/NetworKingScreen0.svg" class="d-block w-100" alt="Contact Pro Logo">
                   </div>
                   <div class="carousel-item">
-                    <img src="/img/screenshots/BugTrackerScreen1.jpg" class="d-block w-100" alt="Screenshot 1">
+                    <img src="/img/screenshots/NetworKingScreen1.png" class="d-block w-100" alt="Screenshot 1">
                   </div>
                   <div class="carousel-item">
-                    <img src="/img/screenshots/BugTrackerScreen2.jpg" class="d-block w-100" alt="Screenshot 2">
+                    <img src="/img/screenshots/NetworKingScreen2.png" class="d-block w-100" alt="Screenshot 2">
                   </div>
                   <div class="carousel-item">
-                    <img src="/img/screenshots/BugTrackerScreen3.jpg" class="d-block w-100" alt="Screenshot 3">
+                    <img src="/img/screenshots/NetworKingScreen3.png" class="d-block w-100" alt="Screenshot 3">
                   </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#addressBookModalCarousel"
@@ -772,16 +772,16 @@
                 </div>
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="/img/logos/Tech_Talk.png" class="d-block w-100" alt="Tech Talk Logo">
+                    <img src="/img/screenshots/CommentLinesScreen0.svg" class="d-block w-100" alt="Tech Talk Logo">
                   </div>
                   <div class="carousel-item">
-                    <img src="/img/screenshots/BugTrackerScreen1.jpg" class="d-block w-100" alt="Screenshot 1">
+                    <img src="/img/screenshots/CommentLinesScreen1.png" class="d-block w-100" alt="Screenshot 1">
                   </div>
                   <div class="carousel-item">
-                    <img src="/img/screenshots/BugTrackerScreen2.jpg" class="d-block w-100" alt="Screenshot 2">
+                    <img src="/img/screenshots/CommentLinesScreen2.png" class="d-block w-100" alt="Screenshot 2">
                   </div>
                   <div class="carousel-item">
-                    <img src="/img/screenshots/BugTrackerScreen3.jpg" class="d-block w-100" alt="Screenshot 3">
+                    <img src="/img/screenshots/CommentLinesScreen3.png" class="d-block w-100" alt="Screenshot 3">
                   </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#devBlogModalCarousel"
