--- a/index.html
+++ b/index.html
@@ -128,10 +128,9 @@
     <section id="about" class="section-page">
       <div class="container text-center">
         <h2 class="display-1 mb-5">About Me</h2>
-        <a href="https://storyset.com/web" target="_blank" rel="noopener noreferrer" data-bs-toggle="tooltip"
-          data-bs-title="Web illustrations by Storyset" data-bs-placement="right">
-          <img src="/img/Coding-bro.svg" height="250" class="p-3" />
-        </a>
+        <div class="p-3">
+          <img src="/img/jonerik.jpg" height="250" class="rounded-circle" />
+        </div>
         <div class="row">
           <div class="col-lg-8 offset-lg-2">
             I am a software developer based in the United States. I have been building applications and websites for
