Text for Challenges Section

--- a/index.html
+++ b/index.html
@@ -325,11 +325,11 @@
           Smaller Things I Have Built
         </h2>
         <p class="my-5">
-          Coding Challenges are smaller in scope and scale than my full-stack projects.
-          These problems are fun to solve and also showcase some UI skills and front-end
-          dev skills with JavaScript. All the projects are published so you can easily
-          see my work in action. <a href="#contact">Contact me</a> if you would like to
-          discuss any of my work.
+          These are some smaller-scale coding exercises I've solved. I used my front-end
+          skills to create a nice visual interface for each one. This allows anybody to
+          easily test out and play around with my solutions, view the code I wrote, and
+          even access the Github repo. <a href="#contact">Contact me</a> if you would like
+          to discuss any of my work.
         </p>
         <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 gy-5">
           <div class="col">
@@ -341,8 +341,8 @@
                 </picture>
                 <div class="hc-content">
                   <p>
-                    Something having to do with reels, times, and/or rankings, built
-                    with HTML, CSS, and JavaScript
+                    Learn about the top films of the day!
+                    Built with HTML, CSS, JavaScript, and the TMDB API.
                   </p>
                   <a class="btn btn-primary" href="https://rainbow-choux-867392.netlify.app/" target="_blank"
                     rel="noopener noreferrer">Visit Page</a>
@@ -359,8 +359,8 @@
                 </picture>
                 <div class="hc-content">
                   <p>
-                    Something having to do with loans, built with
-                    HTML, CSS, and JavaScript
+                    Get a detailed payment schedule for an amortized loan!
+                    Built with HTML, CSS, and JavaScript.
                   </p>
                   <a class="btn btn-primary" href="https://gleeful-lokum-a7a444.netlify.app/" target="_blank"
                     rel="noopener noreferrer">Visit Page</a>
@@ -377,8 +377,8 @@
                 </picture>
                 <div class="hc-content">
                   <p>
-                    Something having to do with event attendance counts, built
-                    with HTML, CSS, and JavaScript
+                    Record attendance stats for events!
+                    Built with HTML, CSS, and JavaScript. Utilizes local storage.
                   </p>
                   <a class="btn btn-primary" href="https://lovely-cassata-e67814.netlify.app/" target="_blank"
                     rel="noopener noreferrer">Visit Page</a>
@@ -395,8 +395,8 @@
                 </picture>
                 <div class="hc-content">
                   <p>
-                    Something having to do with fizzes and/or buzzes, built with
-                    HTML, CSS, and JavaScript
+                    A visual solver for a customizable game of "Fizz Buzz"!
+                    Built with HTML, CSS, and JavaScript.
                   </p>
                   <a class="btn btn-primary" href="https://thunderous-melba-a347d1.netlify.app/" target="_blank"
                     rel="noopener noreferrer">Visit Page</a>
@@ -413,8 +413,8 @@
                 </picture>
                 <div class="hc-content">
                   <p>
-                    Something having to do with a smart ram,
-                    built with HTML, CSS, and JavaScript
+                    Type in a message to see whether or not it's a palindrome!
+                    Built with HTML, CSS, and JavaScript.
                   </p>
                   <a class="btn btn-primary" href="https://spectacular-strudel-f0f2ba.netlify.app/" target="_blank"
                     rel="noopener noreferrer">Visit Page</a>
@@ -431,8 +431,8 @@
                 </picture>
                 <div class="hc-content">
                   <p>
-                    Something having to do with backs and words, built with
-                    HTML, CSS, and JavaScript
+                    Type in a message, and see what it looks like reversed!
+                    Built with HTML, CSS, and JavaScript.
                   </p>
                   <a class="btn btn-primary" href="https://splendorous-taiyaki-628766.netlify.app/" target="_blank"
                     rel="noopener noreferrer">Visit Page</a>
@@ -515,10 +515,10 @@
         <div class="col-9 col-lg-6 d-flex justify-content-end justify-content-lg-center">
           <div class="card shadow">
             <div class="card-body text-center bg-black">
-              Check out my 
-              <a href="https://bugtracker-production-b641.up.railway.app/"
-                target="_blank" rel="noopener noreferrer" class="gold-underline">
-                  <span class="text-shine-gold">Issue Tracker</span></a>!
+              Check out my
+              <a href="https://bugtracker-production-b641.up.railway.app/" target="_blank" rel="noopener noreferrer"
+                class="gold-underline">
+                <span class="text-shine-gold">Issue Tracker</span></a>!
             </div>
           </div>
         </div>
